--- a/_less/main.less
+++ b/_less/main.less
@@ -3,6 +3,15 @@
  * It imports all component LESS files and compiles to main.css
  * ____________________________________________________________ */
 
-@import "reset.less";
-@import "custom.less";
-@import "style.less";
+@import "_core/reset.less";
+@import "_core/remixins.less";
+@import "_core/custom.less";
+
+// These are based off Novastrap
+// Required for Grid system and Novastrap mixins
+@import "_core/variables.less";
+@import "_core/grid.less";
+
+// Site-wide stuff
+// General layout and page structure, fonts, text
+@import "project/style.less";
